섹션 제목 공통 스타일

--- a/src/index.html
+++ b/src/index.html
@@ -115,9 +115,15 @@
               <dt>저자</dt>
               <dd>김데레사</dd>
               <dt class="a11yHidden">평점</dt>
-              <dd class="themeGreen ratingStar"
+              <dd class="themeGreen rating"
                   aria-label="5점 만점에 4점">
-                <span aria-hidden="true">★★★★☆</span>
+                <span aria-hidden="true" class="ratingStar">
+                  <span>★</span>
+                  <span>★</span>
+                  <span>★</span>
+                  <span>★</span>
+                  <span>☆</span>
+                </span>
               </dd>
             </dl>
             <!-- 별점만 별도의 컴포넌트로 바라본다면 다음과 같이 마크업 할 수 있다. -->
